--- a/Docker-compose.yml
+++ b/Docker-compose.yml
@@ -7,8 +7,8 @@ services:
       - "8081:8080"
     environment:
       - SPRING_DATASOURCE_URL=jdbc:sqlserver://db:1433;databaseName=ticket_db;encrypt=true;trustServerCertificate=true
-      - SPRING_DATASOURCE_USERNAME=sa
-      - SPRING_DATASOURCE_PASSWORD=12345678
+      - SPRING_DATASOURCE_USERNAME=user
+      - SPRING_DATASOURCE_PASSWORD=Colombia_2025
     depends_on:
       db:
         condition: service_healthy
@@ -16,7 +16,7 @@ services:
   db:
     image: mcr.microsoft.com/mssql/server:2019-latest
     environment:
-      SA_PASSWORD: "YourStrong@Passw0rd"
+      SA_PASSWORD: "Colombia_2025"
       ACCEPT_EULA: "Y"
     ports:
       - "1433:1433"
@@ -24,7 +24,7 @@ services:
       - sqlserver_data:/var/opt/mssql
       - ./docker/db:/docker-entrypoint-initdb.d
     healthcheck:
-      test: ["CMD-SHELL", "/opt/mssql-tools/bin/sqlcmd -U sa -P YourStrong@Passw0rd -Q \"SELECT 1\" -b -o /dev/null || exit 1"]
+      test: ["CMD-SHELL", "/opt/mssql-tools/bin/sqlcmd -U user -P Colombia_2025 -Q \"SELECT 1\" -b -o /dev/null || exit 1"]
       interval: 10s
       timeout: 5s
       retries: 10
